--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "angular": "1.5.0",
+    "angular-messages": "^1.5.8",
     "angular-ui-router": "0.2.18",
     "babel": "^5.0.12",
     "body-parser": "^1.12.0",
