--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "angular": "1.5.0",
     "angular-messages": "^1.5.8",
     "angular-ui-router": "0.2.18",
+    "angular-ui-sortable": "^0.14.3",
     "babel": "^5.0.12",
     "body-parser": "^1.12.0",
     "bootstrap": "^3.3.5",
@@ -22,6 +23,8 @@
     "commander": "^2.9.0",
     "express": "^4.12.0",
     "itunes-library-stream": "^0.0.0",
+    "jquery": "^3.1.0",
+    "jquery-ui": "^1.12.0",
     "lodash": "^4.15.0",
     "mime": "^1.3.4",
     "musicmetadata": "^2.0.2",
